--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Nombre: Juan Uzhca
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <title>HTML</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="estilo.css">
+</head>
+
+<body>
+  <p>M3A Juan Uzhca</p>
+</body>
+</html>
