--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@ https://templatemo.com/tm-559-zay-shop
                             <a href="shop-single.html" class="h2 text-decoration-none text-dark">AnyDesk</a>
                             <p class="card-text">
                                 AnyDesk es un software de escritorio remoto que permite acceder y controlar dispositivos de forma remota a través de internet. 
+                                https://anydesk.com/es
                             </p>
                             <p class="text-muted">Reviews (24)</p>
                         </div>
@@ -289,7 +290,9 @@ https://templatemo.com/tm-559-zay-shop
                             </ul>
                             <a href="shop-single.html" class="h2 text-decoration-none text-dark">Teamviewer</a>
                             <p class="card-text">
-                                TeamViewer es un software que permite el control remoto, el acceso a escritorios y la asistencia técnica en tiempo real a través de internet. Es ampliamente utilizado para solucionar problemas técnicos, colaborar en proyectos o acceder a dispositivos desde ubicaciones remotas. Algunas de sus características clave incluyen:
+                                TeamViewer es un software que permite el control remoto, el acceso a escritorios y la asistencia técnica en tiempo real a través de internet.
+                                 Es ampliamente utilizado para solucionar problemas técnicos, colaborar en proyectos o acceder a dispositivos desde 
+                                 ubicaciones remotas. https://www.teamviewer.com/latam/?utm_source=google&utm_medium=cpc&utm_campaign=latam%7Cb%7Cpr%7C23%7Cjun%7Ctv-core-account-creation-sn%7Cnew%7Ct0%7C0&utm_content=Web-Client&utm_term=teamviewer+web&_bt=700908949821&_bm=e&_bn=g&gad_source=1&gclid=EAIaIQobChMI0dea-eenigMVE5xaBR2PNCwrEAAYASAAEgIXpfD_BwE
                             </p>
                             <p class="text-muted">Reviews (48)</p>
                         </div>
